force-app/main/default/objects/Lead_Help_Access__c/Lead_Help_Access__c.object-meta.xml
<CustomObject>
    <label>Lead Help Access</label>
    <nameField>
        <label>Lead Help Access Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Help Access</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>