force-app/main/default/objects/Lead_Help_Access__c/fields/Disabled_Help_Box__c.field-meta.xml
<CustomField>
    <fullName>Disabled_Help_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disabled Help Box</label>
    <type>Checkbox</type>
</CustomField>