force-app/main/default/objects/Lead_Help_Access__c/fields/Test1__c.field-meta.xml
<CustomField>
    <fullName>Test1__c</fullName>
    <label>Test1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>